name:              illusions-collection
version:           0.0.1
license:           BSD3
license-file:      LICENSE
author:            Sean Seefried
maintainer:        Sean Seefried
synopsis:          Optical illusions
description:       Optical Illusions
category:          Web
stability:         Experimental
cabal-version:     >= 1.16
build-type:        Simple
homepage:          http://seanseefried.com

build-depends:

executable         Rotating
    hs-source-dirs:    .
    default-language:  Haskell2010
    ghc-options:       -O2
    main-is:           Rotating.hs
    build-depends: base == 4.6.0.1
                 , containers == 0.5.0.0
                 , time == 1.4.0.1
                 , cairo == 0.12.5.3
                 , cpu == 0.1.2
                 , elerea == 2.7.0.2
                 , glib == 0.12.5.4
                 , helm == 0.6.1
                 , mtl == 2.1.3.1
                 , pango == 0.12.5.3
                 , random == 1.0.1.1
                 , sdl2 == 1.1.0
                 , text == 1.1.1.3
                 , transformers == 0.3.0.0
                 , utf8-string == 0.3.8

executable         Pong
    hs-source-dirs:    .
    default-language:  Haskell2010
    ghc-options:       -O2
    main-is:           Pong.hs
    build-depends: base == 4.6.0.1
                 , containers == 0.5.0.0
                 , time == 1.4.0.1
                 , cairo == 0.12.5.3
                 , cpu == 0.1.2
                 , elerea == 2.7.0.2
                 , glib == 0.12.5.4
                 , helm == 0.6.1
                 , mtl == 2.1.3.1
                 , pango == 0.12.5.3
                 , random == 1.0.1.1
                 , sdl2 == 1.1.0
                 , text == 1.1.1.3
                 , transformers == 0.3.0.0
                 , utf8-string == 0.3.8